# rpcserv

./: README.md
client/: apple_music.py  client.py  pyproject.toml  utils.py
server/: pyproject.toml  server.py
